--- a/Resources/Prototypes/GameRules/unknown_shuttles.yml
+++ b/Resources/Prototypes/GameRules/unknown_shuttles.yml
@@ -72,3 +72,18 @@
     duration: 1
   - type: LoadMapRule
     preloadedGrid: SyndieEvacPod
+
+- type: entity
+  id: UnknownShuttleLostNukie
+  parent: BaseGameRule
+  noSpawn: true
+  components:
+  - type: StationEvent
+    startAnnouncement: station-event-unknown-shuttle-incoming
+    startAudio:
+      path: /Audio/Announcements/attention.ogg
+    weight: 2
+    reoccurrenceDelay: 30
+    duration: 1
+  - type: LoadMapRule
+    preloadedGrid: LostNukie
