--- a/Resources/Prototypes/Shuttles/shuttle_incoming_event.yml
+++ b/Resources/Prototypes/Shuttles/shuttle_incoming_event.yml
@@ -27,3 +27,9 @@
   id: SyndieEvacPod
   path: /Maps/Shuttles/ShuttleEvent/syndie_evacpod.yml
   copies: 2
+
+- type: preloadedGrid
+  id: LostNukie
+  path: /Maps/Shuttles/ShuttleEvent/lost_nukie.yml
+  copies: 1
+  
