--- a/Resources/Maps/Shuttles/ShuttleEvent/lost_nukie.yml
+++ b/Resources/Maps/Shuttles/ShuttleEvent/lost_nukie.yml
@@ -1078,6 +1078,23 @@ entities:
       rot: 3.141592653589793 rad
       pos: 4.5,2.5
       parent: 2
+- proto: RandomHumanoidSyndicadeLostNukie
+  entities:
+  - uid: 161
+    components:
+    - type: Transform
+      pos: 0.5,4.5
+      parent: 2
+  - uid: 162
+    components:
+    - type: Transform
+      pos: 1.5,4.5
+      parent: 2
+  - uid: 163
+    components:
+    - type: Transform
+      pos: 5.5,3.5
+      parent: 2
 - proto: ReinforcedPlasmaWindow
   entities:
   - uid: 129
