atualiza lost nukie nomes

--- a/Resources/Prototypes/Entities/Mobs/Player/humanoid.yml
+++ b/Resources/Prototypes/Entities/Mobs/Player/humanoid.yml
@@ -924,5 +924,8 @@
       prototypes: [ SyndicateLostOperativeGearBasic ]
     - type: RandomMetadata
       nameSegments:
-      - names_first
-      - names_last
+      - nukeops-role-operator
+      - SyndicateNamesNormal
+      mindComponents:
+      - type: NukeopsRole
+        prototype: Nukeops
