tenta corrigir erro de antag

--- a/Resources/Prototypes/Entities/Mobs/Player/humanoid.yml
+++ b/Resources/Prototypes/Entities/Mobs/Player/humanoid.yml
@@ -910,6 +910,7 @@
   id: SyndieLostNukie
   randomizeName: false
   components:
+    - type: NukeOperative
     - type: NpcFactionMember
       factions:
       - Syndicate
